Change the way the the project is launched