@@ -36,7 +36,8 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>net.snortum.javafx.multiscenefxml.Main</mainClass>
+					<mainClass>net.snortum.javafx.multiscenefxml.SceneFxmlAppLauncher</mainClass>
+					<arguments>--module-path /home/knute/java/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml</arguments>
 				</configuration>
 			</plugin>
 		</plugins>
